some ui problems fixed

--- a/app/src/main/res/layout/bottom_sheet_tomorrow_plan.xml
+++ b/app/src/main/res/layout/bottom_sheet_tomorrow_plan.xml
@@ -4,15 +4,16 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:background="@android:color/transparent">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         app:cardCornerRadius="16dp"
-        app:cardElevation="8dp"
-        app:cardBackgroundColor="@android:color/white">
+        app:cardElevation="0dp"
+        app:strokeWidth="0dp"
+        app:cardBackgroundColor="@android:color/transparent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/yarinki_planlariniz"
                 android:textSize="20sp"
+                android:textColor="@color/softWhite"
                 android:textStyle="bold"
                 android:gravity="center"/>
 
@@ -33,9 +35,10 @@
                 android:id="@+id/rvPlans"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="16dp"
+                android:background="@android:color/transparent"/>
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </FrameLayout>
