--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -48,10 +48,10 @@
             android:textColor="@color/textColor"
             android:textSize="22sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iconsGroup" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- Sağdaki ikonlar -->
         <LinearLayout
